# multismash

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.py
config/: config.yaml
example/: config-example.yaml
multismash/: main.py  multismash.py  multismash_config.py
results/example/: all_regions.tsv  region_counts.tsv
workflow/: Snakefile
workflow/config/: config-template.yaml
workflow/envs/: bigscape.yaml
workflow/rules/: common.smk
workflow/schema/: config.schema.yaml
workflow/scripts/: count_regions.py  tabulate_regions.py
workflow/scripts/test/: broken.gbff  test_count_regions.py  test_tabulate_regions.py
workflow/scripts/test/fake_antismash/: GCF_000407825_minimal.json  GCF_000407825_parsed.json
workflow/scripts/test/fake_antismash/has0/: has0.json
workflow/tests/: test_count_regions.py
workflow/tests/fake_antismash/has3/: has3.json
workflow/tests/fake_antismash/has4/: has4.json
